--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
 # 屏蔽上面两个文件夹路径下的所有文件
-# /src/main/resources/front/**
-# /src/main/resources/backend/**
+/src/main/resources/front/
+/src/main/resources/backend/
 
-*.js
-*.css
-*.html
-*.htm
-*.json
+.gitignore
